# BUHO

./: .gitattributes  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_tables.py
backend/app/: celery_app.py  config.py  db.py  enrichment.py  main.py  models.py  schemas.py
backend/app/api/: scan.py
backend/app/auth/: security.py
backend/app/db/: __init__.py  models.py  session.py  user_models.py
backend/app/parsers/: base.py  gobuster.py  governance.py  nikto.py  sqlmap.py  wapiti.py
backend/app/routers/: scans.py
backend/app/services/: ai.py  cve.py  prioritization.py  remediation.py  scanner.py  tooling.py  vulnerabilities.py
backend/app/tasks/: scans.py  worker.py
backend/app/utils/: validators.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.tsx  api.js  main.jsx  styles.css
frontend/src/components/: AssetsOverview.tsx  AttackPathsView.tsx  DashboardCards.tsx  FindingsTable.tsx  (+5 more)
prompts/: ia_remediation_prompt.txt  usage_instructions.md
scanners/gobuster/: Dockerfile
scanners/nikto/: Dockerfile
scanners/sqlmap/: Dockerfile
scanners/wapiti/: Dockerfile
scripts/: create_admin.sh  init_db.sh  run_demo_scan.sh
scripts/mocks/: gobuster.json  nikto.json  sqlmap.json  wapiti.json
tests/: conftest.py
tests/integration/: test_import_zip.py
tests/unit/: test_parsers.py  test_prioritization.py
(+4 files in other folders)
